--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ body {
   padding-bottom: 30%;
 }
 
-.nav-list-item>a {
+.nav-list-item > a {
   text-decoration: none;
   color: #1a2236;
   font-family: Poppins, sans-serif;
@@ -178,29 +178,22 @@ body {
   height: 50%;
   width: 90%;
   padding: 0;
-  margin: 5vh 0;
+  margin-top: 5vh;
 }
 
-.thumbnail-scroll{
+.thumbnail-scroll {
   height: 20%;
   width: 90%;
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
-  gap: 2px;
-}
-.thumb-scroll-img{
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
 }
 
-.pop-thumbnail {
-  width: 90%;
-  height: 90%;
+.thumb-scroll-img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  margin: 0 auto;
 }
 
 .popup-description {
@@ -227,7 +220,7 @@ body {
   padding: 10px;
   border: solid 3px #1a2236;
   color: #1a2236;
-  font-family: Poppins,sans-serif;
+  font-family: Poppins, sans-serif;
   font-weight: 500;
   font-size: 1.25em;
   line-height: 1.5em;
@@ -247,14 +240,14 @@ body {
   width: 10%;
   min-height: 100%;
   border: 0;
-  background: url('../res-icons/Vector 4.svg') 0 50% no-repeat;
+  background: url("../res-icons/Vector 4.svg") 0 50% no-repeat;
 }
 
 .right-button {
   float: right;
   width: 10%;
   border: 0;
-  background: url('../res-icons/Vector 5.svg') 100% 50% no-repeat;
+  background: url("../res-icons/Vector 5.svg") 100% 50% no-repeat;
   min-height: 100%;
 }
 
@@ -267,12 +260,12 @@ body {
 }
 
 .live-button {
-  background: #fff url('../res-icons/ic_link.svg') 90% 30% no-repeat;
+  background: #fff url("../res-icons/ic_link.svg") 90% 30% no-repeat;
   background-size: 6%;
 }
 
 .src-button {
-  background: #fff url('../res-icons/ic_github_white.svg') 90% 30% no-repeat;
+  background: #fff url("../res-icons/ic_github_white.svg") 90% 30% no-repeat;
   background-size: 6%;
 }
 
@@ -287,10 +280,10 @@ body {
 .pop-tech-item {
   border: solid 1px #1a2236;
   font-weight: 300;
-  font-size: 1.4m;
+  font-size: 1.4em;
   line-height: 1em;
   text-align: center;
-  padding: 10px 10px;
+  padding: 10px;
   margin: 0 20px;
 }
 
@@ -330,7 +323,7 @@ body {
   width: 40%;
 }
 
-.proj-nav{
+.proj-nav {
   height: 10%;
   max-width: 70%;
   margin: 5vh auto;
@@ -339,33 +332,33 @@ body {
   align-items: center;
 }
 
-.proj-nav-left{
+.proj-nav-left {
   text-align: center;
   border: none;
   width: 40%;
-  background: url('../res-icons/ic_arrow_left.svg') 0 0 no-repeat;
+  background: url("../res-icons/ic_arrow_left.svg") 0 0 no-repeat;
   background-size: contain;
   font-size: 1.3em;
   line-height: 1.5em;
   color: #1a2236;
 }
 
-.proj-nav-left:hover{
+.proj-nav-left:hover {
   cursor: pointer;
 }
 
-.proj-nav-right{
+.proj-nav-right {
   text-align: center;
   border: none;
   width: 40%;
-  background: url('../res-icons/ic_arrow_right-6.svg') 90% 0 no-repeat;
+  background: url("../res-icons/ic_arrow_right-6.svg") 90% 0 no-repeat;
   background-size: contain;
   font-size: 1.3em;
   line-height: 1.5em;
   color: #1a2236;
 }
 
-.proj-nav-right:hover{
+.proj-nav-right:hover {
   cursor: pointer;
 }
 
@@ -438,7 +431,7 @@ body {
   align-items: stretch;
 }
 
-.form-item>label {
+.form-item > label {
   display: none;
 }
 
@@ -470,7 +463,7 @@ body {
   width: 40%;
 }
 
-.resume-link>div {
+.resume-link > div {
   color: #98dede;
   font-family: Poppins, sans-serif;
   font-style: normal;
@@ -497,7 +490,6 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-
   /* styling for navigation bar elements -ram */
   .nav-bar {
     padding: 5vh;
@@ -516,7 +508,7 @@ body {
     align-items: center;
   }
 
-  .nav-list-item>a {
+  .nav-list-item > a {
     padding: 2.5vh;
     text-decoration: none;
     font-family: Poppins, sans-serif;
@@ -542,7 +534,7 @@ body {
     grid-template-rows: 1fr;
   }
 
-  .intro-container>header {
+  .intro-container > header {
     padding: 5%;
     display: grid;
     grid-template-rows: 0.5fr 1fr 1fr 1fr;
@@ -599,7 +591,7 @@ body {
     gap: 0;
   }
 
-  .projects-section>h2 {
+  .projects-section > h2 {
     transform: rotate(-90deg);
     width: 50%;
     text-align: left;
@@ -686,7 +678,7 @@ body {
     grid-template-columns: 1fr 1fr;
   }
 
-  .about-me-section>header {
+  .about-me-section > header {
     padding: 15%;
     order: 2;
   }
@@ -734,7 +726,7 @@ body {
     display: block;
   }
 
-  .form-item>label {
+  .form-item > label {
     display: block;
     font-size: 1em;
     text-align: left;
@@ -774,7 +766,7 @@ body {
     width: 30%;
   }
 
-  .link-container>a>img:hover {
+  .link-container > a > img:hover {
     transform: scale(2);
     transition: transform 1s;
   }
