Implement code review 1 comments
1.added spacing in pop window desktop
2.added border to thumbnail in pop up window
3.added modal window border in desktop version

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ body {
   padding-bottom: 30%;
 }
 
-.nav-list-item > a {
+.nav-list-item>a {
   text-decoration: none;
   color: #1a2236;
   font-family: Poppins, sans-serif;
@@ -186,6 +186,7 @@ body {
   width: 90%;
   padding: 0;
   display: grid;
+  column-gap: 5px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
 }
@@ -287,8 +288,30 @@ body {
   margin: 0 20px;
 }
 
-.popup-desktop {
+.desktop-modal {
+  position: fixed;
+  font-family: Poppins, sans-serif;
+  z-index: 1;
+  width: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background: #1a2236;
   margin: 0 auto;
+}
+
+.popup-desktop {
+  position: fixed;
+  top: 5%;
+  left: 5%;
+  right: 5%;
+  bottom: 5%;
+  z-index: 2;
+  width: 85%;
+  padding-left: 5%;
+  background: #fff;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .dt-pop-header {
@@ -432,7 +455,7 @@ body {
   align-items: stretch;
 }
 
-.form-item > label {
+.form-item>label {
   display: none;
 }
 
@@ -464,7 +487,7 @@ body {
   width: 40%;
 }
 
-.resume-link > div {
+.resume-link>div {
   color: #98dede;
   font-family: Poppins, sans-serif;
   font-style: normal;
@@ -491,6 +514,7 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+
   /* styling for navigation bar elements -ram */
   .nav-bar {
     padding: 5vh;
@@ -509,7 +533,7 @@ body {
     align-items: center;
   }
 
-  .nav-list-item > a {
+  .nav-list-item>a {
     padding: 2.5vh;
     text-decoration: none;
     font-family: Poppins, sans-serif;
@@ -535,7 +559,7 @@ body {
     grid-template-rows: 1fr;
   }
 
-  .intro-container > header {
+  .intro-container>header {
     padding: 5%;
     display: grid;
     grid-template-rows: 0.5fr 1fr 1fr 1fr;
@@ -592,7 +616,7 @@ body {
     gap: 0;
   }
 
-  .projects-section > h2 {
+  .projects-section>h2 {
     transform: rotate(-90deg);
     width: 50%;
     text-align: left;
@@ -679,7 +703,7 @@ body {
     grid-template-columns: 1fr 1fr;
   }
 
-  .about-me-section > header {
+  .about-me-section>header {
     padding: 15%;
     order: 2;
   }
@@ -727,7 +751,7 @@ body {
     display: block;
   }
 
-  .form-item > label {
+  .form-item>label {
     display: block;
     font-size: 1em;
     text-align: left;
@@ -767,7 +791,7 @@ body {
     width: 30%;
   }
 
-  .link-container > a > img:hover {
+  .link-container>a>img:hover {
     transform: scale(2);
     transition: transform 1s;
   }
