--- a/css/styles.css
+++ b/css/styles.css
@@ -160,11 +160,12 @@ body {
   position: fixed;
   font-family: Poppins, sans-serif;
   z-index: 1;
-  width: 100%;
+  width: 90%;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
+  margin: 0 auto;
   padding: 5%;
   background: #fff;
   overflow-y: scroll;
@@ -172,7 +173,7 @@ body {
 }
 
 .popup-header-container {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -193,14 +194,12 @@ body {
 }
 
 .project-scroll-container {
-  width: 90%;
   height: 40%;
   margin-top: 5vh;
 }
 
 .thumbnail-scroll {
   height: 15%;
-  width: 90%;
   display: grid;
   column-gap: 5px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -215,7 +214,6 @@ body {
 
 .popup-description {
   color: #1a2236;
-  width: 90%;
   font-weight: 400;
   font-size: 1.2em;
   line-height: 1.8em;
@@ -224,7 +222,6 @@ body {
 }
 
 .pop-btn-contnr {
-  width: 90%;
   height: 20%;
   display: flex;
   flex-direction: column;
@@ -643,45 +640,47 @@ body {
   }
 
   .popup-header {
+    width: 100%;
     font-size: 3.2em;
     line-height: 2em;
   }
 
   .project-scroll-container {
+    width: 100%;
     height: 60%;
     margin-top: 5vh;
   }
 
   .popup-description {
     width: 70%;
+    margin: 0 auto;
+    text-align: left;
     font-size: 1.1em;
     line-height: 1.9em;
-    text-align: left;
-    padding: 0 10vw;
     margin-top: 5vh;
   }
 
   .pop-btn-contnr {
-    padding: 0 10vw;
     height: 10%;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
     margin: 0 auto;
-    width: 70%;
+    margin-top: 5vh;
+    width: 100%;
   }
 
   .live-button {
     margin-right: 4vw;
-    width: 40%;
+    width: 30%;
   }
 
   .src-button {
-    width: 40%;
+    width: 30%;
   }
 
   .proj-nav {
     height: 10%;
-    max-width: 70%;
+    width: 100%;
     margin: 5vh auto;
     display: flex;
     justify-content: space-between;
