--- a/css/styles.css
+++ b/css/styles.css
@@ -390,19 +390,23 @@ body {
 }
 
 .form-textarea {
-margin-bottom: 5%;
+  margin-bottom: 5%;
 }
 
-.errmsg-container{
+.errmsg-container {
   font-size: 0.8em;
-  font-family: Poppins,sans-serif;
+  font-family: Poppins, sans-serif;
   font-weight: 400;
   margin-bottom: 1%;
   text-align: center;
 }
 
-.error-msg-color{
+.error-msg-color {
   color: #e2505c;
+}
+
+.errmsg-highlight{
+  border:solid 3px #e2505c;
 }
 
 .social-links {
@@ -807,11 +811,11 @@ margin-bottom: 5%;
     width: 50%;
   }
 
-  .errmsg-container{
+  .errmsg-container {
     display: block;
     font-size: 1em;
     font-weight: 400;
-    padding:0;
+    padding: 0;
     margin-top: 0;
     margin-bottom: 2%;
   }
