Add first project to the portfolio page

--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,6 @@ body {
 }
 
 .thumbnail-scroll {
-  height: 15%;
   display: grid;
   column-gap: 5px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -210,7 +209,7 @@ body {
 
 .thumb-scroll-img {
   width: 100%;
-  height: 100%;
+  height: 70%;
   object-fit: cover;
 }
 
@@ -626,10 +625,6 @@ body {
     right: 0;
   }
 
-  .project-details-hover {
-
-  }
-
   .button-project {
     border: solid 2px #fff;
   }
@@ -668,8 +663,7 @@ body {
 
   .project-scroll-container {
     width: 100%;
-    height: 60%;
-    margin-top: 5vh;
+    height: 100%;
   }
 
   .popup-description {
@@ -678,7 +672,7 @@ body {
     text-align: left;
     font-size: 1.1em;
     line-height: 1.9em;
-    margin-top: 5vh;
+    margin-top: 7%;
   }
 
   .pop-btn-contnr {
